[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/map.gd" type="Script" id=1]
[ext_resource path="res://tileset/game_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://fonts/Josefin - 30.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/win_band_handler.gd" type="Script" id=4]
[ext_resource path="res://scenes/camera_handler.gd" type="Script" id=5]

[sub_resource type="Gradient" id=1]
interpolation_mode = 1
offsets = PoolRealArray( 0, 0.5 )
colors = PoolColorArray( 0, 0.180392, 1, 0.498039, 1, 0, 0, 0.498039 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="TileMap" type="TileMap"]
position = Vector2( 0, 1 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 65536, 2, 0, 65537, 0, 0, 65539, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 131072, 2, 0, 131085, 2, 0, 196608, 2, 0, 196609, 2, 0, 196611, 2, 0, 196621, 2, 0, 262144, 2, 0, 262157, 2, 0, 327680, 2, 0, 327686, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 393216, 2, 0, 393225, 2, 0, 458752, 2, 0, 458758, 2, 0, 458760, 1, 0, 458761, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0 )
script = ExtResource( 1 )
player_1_col = Color( 0.262745, 0.529412, 0.65098, 1 )
player_2_col = Color( 0.607843, 0.235294, 0.235294, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="UI_container" type="Control" parent="UI"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="progress_bar" type="TextureRect" parent="UI/UI_container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -800.0
margin_top = 24.0
margin_right = 800.0
margin_bottom = 72.0
rect_min_size = Vector2( 1600, 48 )
texture = SubResource( 2 )
expand = true

[node name="background" type="ColorRect" parent="UI/UI_container/progress_bar"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -805.0
margin_top = -29.0
margin_right = 805.0
margin_bottom = 29.0
rect_min_size = Vector2( 1610, 58 )
color = Color( 0, 0, 0, 1 )

[node name="separator" type="ColorRect" parent="UI/UI_container/progress_bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -24.0
margin_right = 2.5
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )
color = Color( 0, 0, 0, 1 )

[node name="win_band" type="Control" parent="UI/UI_container"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -50.0
margin_right = 960.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 4 )

[node name="win_outline" type="ColorRect" parent="UI/UI_container/win_band"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -60.0
margin_right = 960.0
margin_bottom = 60.0
rect_min_size = Vector2( 1920, 120 )
color = Color( 0.192157, 0.192157, 0.247059, 1 )

[node name="win_bg" type="ColorRect" parent="UI/UI_container/win_band"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 81 )
color = Color( 0.129412, 0.129412, 0.145098, 1 )

[node name="win_label" type="RichTextLabel" parent="UI/UI_container/win_band"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -36.0
margin_right = 960.0
margin_bottom = 45.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Les bleus ont gagné !"
text = "Les bleus ont gagné !"
fit_content_height = true
